--- a/submission.yaml
+++ b/submission.yaml
@@ -1,5 +1,7 @@
 # challenge name(s); defaults to all compatible challenges
 # challenge: [c1,c2]
+challenge:
+- aido-LF*state*
 
 # conventions + format
 protocol: aido5-db20-state-z2
@@ -7,4 +9,3 @@ protocol: aido5-db20-state-z2
 user-label: "baseline-simple-yield"
 # any JSON payload
 user-payload: {}
-
