--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,12 @@ workflows:
             ignore: /daffy-staging.*/
 jobs:
   submit: &template
-    docker:
-    - image: ${DOCKER_REGISTRY}/duckietown/aido-submission-ci-test:daffy-amd64
-      auth:
-        username: $DOCKER_USERNAME
-        password: $DOCKER_PASSWORD
+    machine: true
+    # docker:
+    # - image: ${DOCKER_REGISTRY}/duckietown/aido-submission-ci-test:daffy-amd64
+    #   auth:
+    #     username: $DOCKER_USERNAME
+    #     password: $DOCKER_PASSWORD
     steps:
     - checkout
     - setup_remote_docker:
@@ -35,6 +36,12 @@ jobs:
     - store_artifacts:
         path: build-stats
         destination: build-stats
+    - run:
+        name: Install deps
+        # language=bash
+        command: |
+          pip install duckietown-shell
+
     - run:
         name: Setup daffy commands
         # language=bash
