--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,8 @@ workflows:
             ignore: /daffy-staging.*/
 jobs:
   submit: &template
-    machine: true
+    machine: # executor type
+      image: ubuntu-2004:202010-01 # # recommended linux image - includes Ubuntu 20.04, docker 19.03.13, docker-compose 1.27.4
     # docker:
     # - image: ${DOCKER_REGISTRY}/duckietown/aido-submission-ci-test:daffy-amd64
     #   auth:
