--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,20 +27,22 @@ jobs:
     - checkout
 
     - run:
+        name: Install deps
+        # language=bash
+        command: |
+          python3 -m pip install -U pip
+          python3 -m pip install duckietown-shell
+    - run:
         name: Python stats
         command: |
           mkdir -p build-stats
           env | sort | tee  build-stats/env.txt
-          pip list   | sort | tee  build-stats/pip-list.txt
-          pip freeze | sort | tee  build-stats/pip-freeze.txt
+
+          python3 -m pip list   | sort | tee  build-stats/pip-list.txt
+          python3 -m pip freeze | sort | tee  build-stats/pip-freeze.txt
     - store_artifacts:
         path: build-stats
         destination: build-stats
-    - run:
-        name: Install deps
-        # language=bash
-        command: |
-          pip install duckietown-shell
 
     - run:
         name: Setup daffy commands
